# declmath

./: .gitignore  README.md  interfaces.scss  main.py  scripting-with-math.ipynb
Scripts/: generator.py
book/: Index.tex
esolang/: mathsc.py
esolang/grammars/: grammar.lark
esolang/racket/: declmath.rkt
notebooks/: main.py  pyproject.toml
notebooks/src/: cliboard.py
notebooks/templates/: index.html.jinja
