[project]
name = "notebooks-for-mathasscript"
version = "0.1.0"
description = "NoteBooks Application for MathAsScripting"
# readme = "/README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "jinja",
    "jinja2",
    "lark",
    "markupsafe",
    "numpy",
    "pyyaml",
    "rich",
    "typer",
]
